FIXED: card spacing

--- a/public/less/icons.less
+++ b/public/less/icons.less
@@ -34,7 +34,7 @@
 	position: relative;
 	margin: 0 auto;
 	float: right;
-
+	width: @icon-container-length;
 	top: 50%;
 }
 
