--- a/public/less/variables.less
+++ b/public/less/variables.less
@@ -27,6 +27,7 @@
 	
 	// Sizes
 	@icon-length: 40px;
+	@icon-container-length: @icon-length * 2.5;
 	@card-height: 70px;
 
 // fonts and typefaces
